# SimpleModManager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/i18n/en-US/: hints.json
resources/xml/FrameGameBrowser/: frame_root.xml
resources/xml/FrameModBrowser/: frame_mod_browser.xml  group_browser.xml  mod_browser.xml
resources/xml/tabs/: settings.xml
src/: CMakeLists.txt
src/Applications/: CMakeLists.txt
src/Applications/SimpleModManager/: CMakeLists.txt
src/Applications/SimpleModManager/src/: SimpleModManager.cpp
src/CommonUi/: CMakeLists.txt
src/CommonUi/include/: autofocusless_tab_frame.hpp  dialog_util.hpp  focus_sidebar.hpp  icon_applet.hpp  icon_cell.hpp  note_cell.hpp  scroll_list.hpp  subtab_frame.hpp  util.hpp
src/CommonUi/src/: autofocusless_tab_frame.cpp  dialog_util.cpp  focus_sidebar.cpp  icon_applet.cpp  icon_cell.cpp  note_cell.cpp  scroll_list.cpp  subtab_frame.cpp  util.cpp
src/ModManagerCore/: CMakeLists.txt
src/ModManagerCore/include/: AlchemistLogger.h  ConfigHandler.h  Game.h  GameBrowser.h  ModManager.h  ModMigrator.h  ModsPresetHandler.h  Toolbox.h
src/ModManagerCore/include/StateAlchemist/: constants.h  controller.h  fs_manager.h  meta_manager.h
src/ModManagerCore/src/: AlchemistLogger.cpp  ConfigHandler.cpp  Game.cpp  GameBrowser.cpp  ModManager.cpp  ModMigrator.cpp  ModsPreseter.cpp  Selector.cpp
src/ModManagerCore/src/StateAlchemist/: controller.cpp  fs_manager.cpp  meta_manager.cpp
src/ModManagerGui/CoreExtension/include/: GuiModManager.h
src/ModManagerGui/CoreExtension/src/: GuiModManager.cpp
src/ModManagerGui/FrameGameBrowser/include/: FrameRoot.h  TabAbout.h  TabGames.h  TabGeneralSettings.h
src/ModManagerGui/FrameModBrowser/: CMakeLists.txt
src/PC/: resource.rc.in
(+21 files in other folders)
